fixed z-index

--- a/style.css
+++ b/style.css
@@ -114,6 +114,8 @@ dd {
     /* font-style: italic; */
     font-size: 1.5em;
     font-weight: 700;
+    position: sticky;
+    z-index: 99;
 }
 
 @keyframes weight {
